Fix/gruppere separat fravær fra im og søknad (#6306)
* Slår sammen fraværsperioder IM/søknad individuelt før de slås sammen

- Nødvendig å beregne arbeidstakers krav separat for at det skal være mulig å trekke tidligere krav - slik at søkers krav da vil gjelde
- Arbeidstakers krav (IM) vil alltid trumfe brukers krav (søknad) - unntatt når refusjonskrav er trekt (fraværPerDag = 0 timer)

* Endringer etter kodereview

* Fix: IM arbeidsforholdId kan nå overskrive søknad, søknads- og fraværsårsaker tas vare på fra søknad

* Fix: Join fra riktig side

* Revert "Fix: Join fra riktig side"

This reverts commit bf97b73a881ce0d244fc3a486ab1ccb8d089f99c.

* Fix: Join fra riktig side

* Enhetstester

* Forbedre kode

Co-authored-by: Tore Langedal Endestad <tore.langedal.endestad@nav.no>